Fixing off center issue

--- a/src/student_resources/components/styling/ResourceList.css
+++ b/src/student_resources/components/styling/ResourceList.css
@@ -1,4 +1,5 @@
 .resource-list {
+  padding: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
